<resources>
    <string name="app_name">User login</string>
    <string name="action_settings">Exit</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_phoneno">Contact Number</string>
    <string name="prompt_name">Name</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
