<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="com.example.senthurpandi.myapplication.MainActivity$PlaceholderFragment">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_Profile_text"
            android:text="Profile Photo                "

            android:ems="10"


            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"

            app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/profileImg"
            android:layout_weight="1" />
    </LinearLayout>




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/new_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:paddingBottom="10dp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:selectAllOnFocus="false"
                android:paddingBottom="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/new_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
                android:maxLines="1"
                android:selectAllOnFocus="false"
                android:paddingBottom="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/new_phoneno"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phoneno"
                android:maxLines="1"
                android:maxLength="10"
                android:selectAllOnFocus="false"
                android:paddingBottom="10dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/questions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/new_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Your Answer"
                android:maxLines="1"
                android:selectAllOnFocus="false"
                android:paddingBottom="10dp" />
        </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"
                android:layout_gravity="center"
                android:background="@drawable/buttondesign"/>

    </LinearLayout>
</ScrollView>
</RelativeLayout>
